# storage/api-docs/api-docs.json
@@ -1139,6 +1139,180 @@
                 }
             }
         },
+        "/api/pengambilan-obat": {
+            "get": {
+                "tags": [
+                    "Pengambilan Obat"
+                ],
+                "summary": "Menampilkan semua data pengambilan obat",
+                "operationId": "getAllPengambilanObat",
+                "responses": {
+                    "200": {
+                        "description": "Berhasil mendapatkan data"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Pengambilan Obat"
+                ],
+                "summary": "Menyimpan data pengambilan obat",
+                "operationId": "createPengambilanObat",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "pasien_id",
+                                    "inventory_id",
+                                    "jumlah",
+                                    "tanggal_ambil",
+                                    "status"
+                                ],
+                                "properties": {
+                                    "pasien_id": {
+                                        "type": "integer"
+                                    },
+                                    "inventory_id": {
+                                        "type": "integer"
+                                    },
+                                    "jumlah": {
+                                        "type": "integer"
+                                    },
+                                    "tanggal_ambil": {
+                                        "type": "string",
+                                        "format": "date"
+                                    },
+                                    "status": {
+                                        "type": "string",
+                                        "enum": [
+                                            "Diambil",
+                                            "Belum"
+                                        ]
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Data berhasil disimpan"
+                    }
+                }
+            }
+        },
+        "/api/pengambilan-obat/{id}": {
+            "get": {
+                "tags": [
+                    "Pengambilan Obat"
+                ],
+                "summary": "Menampilkan detail pengambilan obat",
+                "operationId": "getPengambilanObatById",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Data ditemukan"
+                    },
+                    "404": {
+                        "description": "Data tidak ditemukan"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Pengambilan Obat"
+                ],
+                "summary": "Memperbarui data pengambilan obat",
+                "operationId": "updatePengambilanObat",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "pasien_id": {
+                                        "type": "integer"
+                                    },
+                                    "inventory_id": {
+                                        "type": "integer"
+                                    },
+                                    "jumlah": {
+                                        "type": "integer"
+                                    },
+                                    "tanggal_ambil": {
+                                        "type": "string",
+                                        "format": "date"
+                                    },
+                                    "status": {
+                                        "type": "string",
+                                        "enum": [
+                                            "Diambil",
+                                            "Belum"
+                                        ]
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Data berhasil diperbarui"
+                    },
+                    "404": {
+                        "description": "Data tidak ditemukan"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Pengambilan Obat"
+                ],
+                "summary": "Menghapus data pengambilan obat",
+                "operationId": "deletePengambilanObat",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Data berhasil dihapus"
+                    },
+                    "404": {
+                        "description": "Data tidak ditemukan"
+                    }
+                }
+            }
+        },
         "/api/poli": {
             "get": {
                 "tags": [
@@ -1621,6 +1795,10 @@
         {
             "name": "Payments",
             "description": "Manajemen data pembayaran"
+        },
+        {
+            "name": "Pengambilan Obat",
+            "description": "Manajemen data pengambilan obat oleh pasien"
         },
         {
             "name": "Poli",
